Thu Jul 12 05:11:41 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insns.def (defined): use method entry and id in cfp for proper
	  superclass, since klass in iseq is shared by dynamically defined
	  methods from the same block.  [ruby-core:45831][Bug #6644]

Thu Jul 12 01:49:07 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP#connect): use local_host and local_port
	  if specified. patched by Ricardo Amorim [Feature #6617]

Wed Jul 11 17:36:39 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: append ENCOBJS to DLDOBJS but not EXTSOLIBS which is
	  not a target, to compile enc/encinit.c.

Wed Jul 11 12:38:20 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/openssl/ossl_pkey_ec.c (ossl_ec_point_mul): nonstatic initializer
	  of an aggregate type is a C99ism.

	* ext/openssl/ossl_pkey_ec.c (ossl_ec_point_mul): get rid of VC++
	  warnings.

Mon Jul  9 16:11:30 2012  Yuki Yugui Sonoda  <yugui@google.com>

	* vm_eval.c (rb_eval_string_from_file,
	  rb_eval_string_from_file_protect): new functions to replace
	  rb_compile_main_from_string() and ruby_eval_main().

	* nacl/pepper_ruby.c: Follows the change in vm_eval.c

Mon Jul  9 14:05:42 2012  Yuki Yugui Sonoda  <yugui@google.com>

	Reverts a half of r36079. As we discussed on ruby-dev@ and IRC,
	we do not need to disclose intermediate representation of program.
	The program embedding CRuby should use rb_eval_string family.
	* include/ruby/ruby.h (ruby_opaque_t): removed.
	  (ruby_compile_main_from_file, ruby_compile_main_from_string,
	   ruby_eval_main): removed.

	* eval.c (ruby_eval_main_internal): became ruby_exec_internal() again.
	  (ruby_eval_main): removed.

	* ruby.c (PREPARE_PARSE_MAIN) reverted.
	  (parse_and_compile_main, ruby_compile_main_from_file,
	   ruby_compile_main_from_string): removed

Wed Jul 11 10:16:38 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby.h (HAVE_RUBY_THREAD_H): to show ruby/thread.h to be
	  available.  fixup of r36355.
