@@ -6,7 +6,7 @@
 ######################################################################
 
 require 'pathname'
-require 'metametameta'
+require 'minitest/metametameta'
 
 module MyModule; end
 class AnError < StandardError; include MyModule; end
